Update generated documentation for version 0.0.2

--- a/release-notes.html
+++ b/release-notes.html
@@ -32,8 +32,18 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h4><a name="0-0-1-beta-Dec-13-2016" class="anchor" href="#0-0-1-beta-Dec-13-2016">0.0.1-beta - Dec 13 2016</a></h4>
+<h4><a name="0-0-2-Dec-31-2016" class="anchor" href="#0-0-2-Dec-31-2016">0.0.2 - Dec 31 2016</a></h4>
 <ul>
+<li>
+Initial release of C# Discriminated Union types
+<ul>
+<li>Parser and Roslyn-Based Code Generator library for Discriminated Unions</li>
+<li>
+Command Line Executable
+#### 0.0.1-beta - Dec 13 2016
+</li>
+</ul>
+</li>
 <li>Changed name from fsharp-project-scaffold to BrightSword.CSharpExtensions.DiscriminatedUnion</li>
 <li>Initial release</li>
 </ul>
