--- a/license.html
+++ b/license.html
@@ -26,7 +26,7 @@
           <li><a href="http://fsharp.org">fsharp.org</a></li>
           <li><a href="https://github.com/johnazariah/csharp-sumtypes">github page</a></li>
         </ul>
-        <h3 class="muted"><a href="/csharp-sumtypes/index.html">BrightSword.CSharpExtensions.DiscriminatedUnion</a></h3>
+        <h3 class="muted"><a href="/csharp-sumtypes/index.html">CSharp.UnionTypes</a></h3>
       </div>
       <hr />
       <div class="row">
@@ -43,10 +43,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <div class="span3">
           <img src="/csharp-sumtypes/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
-            <li class="nav-header">BrightSword.CSharpExtensions.DiscriminatedUnion</li>
+            <li class="nav-header">CSharp.UnionTypes</li>
             <li><a href="/csharp-sumtypes/index.html">Home page</a></li>
             <li class="divider"></li>
-            <li><a href="http://nuget.org/packages/BrightSword.CSharpExtensions.DiscriminatedUnion">Get Library via NuGet</a></li>
+            <li><a href="http://nuget.org/packages/CSharp.UnionTypes">Get Library via NuGet</a></li>
             <li><a href="https://github.com/johnazariah/csharp-sumtypes">Source Code on GitHub</a></li>
             <li><a href="/csharp-sumtypes/license.html">License</a></li>
             <li><a href="/csharp-sumtypes/release-notes.html">Release Notes</a></li>
