--- a/release-notes.html
+++ b/release-notes.html
@@ -26,12 +26,17 @@
           <li><a href="http://fsharp.org">fsharp.org</a></li>
           <li><a href="https://github.com/johnazariah/csharp-sumtypes">github page</a></li>
         </ul>
-        <h3 class="muted"><a href="/csharp-sumtypes/index.html">BrightSword.CSharpExtensions.DiscriminatedUnion</a></h3>
+        <h3 class="muted"><a href="/csharp-sumtypes/index.html">CSharp.UnionTypes</a></h3>
       </div>
       <hr />
       <div class="row">
         <div class="span9" id="main">
           
+<h4><a name="1-0-1-Jan-10-2017" class="anchor" href="#1-0-1-Jan-10-2017">1.0.1 - Jan 10 2017</a></h4>
+<ul>
+<li>SingleFileGenerator and VSIX also published</li>
+<li>Support for constrained types</li>
+</ul>
 <h4><a name="1-0-0-Dec-31-2016" class="anchor" href="#1-0-0-Dec-31-2016">1.0.0 - Dec 31 2016</a></h4>
 <ul>
 <li>
@@ -44,7 +49,7 @@ Command Line Executable
 </li>
 </ul>
 </li>
-<li>Changed name from fsharp-project-scaffold to BrightSword.CSharpExtensions.DiscriminatedUnion</li>
+<li>Changed name from fsharp-project-scaffold to CSharp.UnionTypes</li>
 <li>Initial release</li>
 </ul>
 
@@ -53,10 +58,10 @@ Command Line Executable
         <div class="span3">
           <img src="/csharp-sumtypes/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
-            <li class="nav-header">BrightSword.CSharpExtensions.DiscriminatedUnion</li>
+            <li class="nav-header">CSharp.UnionTypes</li>
             <li><a href="/csharp-sumtypes/index.html">Home page</a></li>
             <li class="divider"></li>
-            <li><a href="http://nuget.org/packages/BrightSword.CSharpExtensions.DiscriminatedUnion">Get Library via NuGet</a></li>
+            <li><a href="http://nuget.org/packages/CSharp.UnionTypes">Get Library via NuGet</a></li>
             <li><a href="https://github.com/johnazariah/csharp-sumtypes">Source Code on GitHub</a></li>
             <li><a href="/csharp-sumtypes/license.html">License</a></li>
             <li><a href="/csharp-sumtypes/release-notes.html">Release Notes</a></li>
