--- a/tutorial.html
+++ b/tutorial.html
@@ -13,8 +13,8 @@
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
 
-    <link type="text/css" rel="stylesheet" href="/csharp-uniontypes/content/style.css" />
-    <script type="text/javascript" src="/csharp-uniontypes/content/tips.js"></script>
+    <link type="text/css" rel="stylesheet" href="file://C:\work\csharp-sumtypes\docs\tools\../output/content/style.css" />
+    <script type="text/javascript" src="file://C:\work\csharp-sumtypes\docs\tools\../output/content/tips.js"></script>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -25,9 +25,9 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li><a href="http://fsharp.org">fsharp.org</a></li>
-          <li><a href="https://github.com/johnazariah/csharp-uniontypes">github page</a></li>
+          <li><a href="https://github.com/johnazariah/csharp-sumtypes">github page</a></li>
         </ul>
-        <h3 class="muted"><a href="/csharp-uniontypes/index.html">CSharp.UnionTypes</a></h3>
+        <h3 class="muted"><a href="file://C:\work\csharp-sumtypes\docs\tools\../output/index.html">CSharp.UnionTypes</a></h3>
       </div>
       <hr />
       <div class="row">
@@ -45,12 +45,15 @@
 </ul>
 <p>The VSIX contains a "CustomTool" (also known as a Single File Generator) called "CSharpUnionTypeGenerator". This generates "code-behind" C# for your <code>.csunion</code> file.</p>
 <ul>
-<li>Create a file to contain your union types in your Visual Studio C# Project.</li>
+<li>
+Create a file to contain your union types in your Visual Studio C# Project. In the file properties window, ensure that:
+<ul>
+<li><strong>Build Action</strong> is set to <em>None</em></li>
+<li><strong>Copy to Output Directory</strong> is set to <em>Never</em></li>
+<li><strong>Custom Tool</strong> is set to <em>CSharpUnionTypeGenerator</em></li>
 </ul>
-<p>In the file properties window, ensure that:
-<em> </em><em>Build Action</em><em> is set to <em>Content</em>
-</em> <strong>Copy to Output Directory</strong> is set to <em>Never</em>
-<em> </em><em>Custom Tool</em>* is set to <em>CSharpUnionTypeGenerator</em></p>
+</li>
+</ul>
 <p>Whenever you save the <code>.csunion</code> file, a <code>.g.cs</code> file - which is its "code-behind" - is generated. It will automatically be added to your project.</p>
 <ul>
 <li>Write more C# code (in traditional <code>.cs</code> files) using the union types.</li>
@@ -69,9 +72,9 @@
 <li>
 You may also add the <code>.csunion</code> file to your project, but ensure that its properties are set as follows:
 <ul>
-<li><strong>Build Action</strong> is set to <em>Content</em></li>
+<li><strong>Build Action</strong> is set to <em>None</em></li>
 <li><strong>Copy to Output Directory</strong> is set to <em>Never</em></li>
-<li><p><strong>Custom Tool</strong> is set to <em>CSharpUnionTypeGenerator</em></p></li>
+<li><p><strong>Custom Tool</strong> is set to <em>None</em></p></li>
 </ul>
 </li>
 <li>Write more C# code (in traditional <code>.cs</code> files) using the union types.</li>
@@ -383,25 +386,25 @@ For example, the following struct has 512 possible values because the constituen
 
         </div>
         <div class="span3">
-          <img src="/csharp-uniontypes/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <img src="file://C:\work\csharp-sumtypes\docs\tools\../output/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">CSharp.UnionTypes</li>
-            <li><a href="/csharp-uniontypes/index.html">Home page</a></li>
+            <li><a href="file://C:\work\csharp-sumtypes\docs\tools\../output/index.html">Home page</a></li>
             <li class="divider"></li>
             <li><a href="http://nuget.org/packages/CSharp.UnionTypes">Get Library via NuGet</a></li>
-            <li><a href="https://github.com/johnazariah/csharp-uniontypes">Source Code on GitHub</a></li>
-            <li><a href="/csharp-uniontypes/license.html">License</a></li>
-            <li><a href="/csharp-uniontypes/release-notes.html">Release Notes</a></li>
+            <li><a href="https://github.com/johnazariah/csharp-sumtypes">Source Code on GitHub</a></li>
+            <li><a href="file://C:\work\csharp-sumtypes\docs\tools\../output/license.html">License</a></li>
+            <li><a href="file://C:\work\csharp-sumtypes\docs\tools\../output/release-notes.html">Release Notes</a></li>
             
             <li class="nav-header">Getting started</li>
-            <li><a href="/csharp-uniontypes/tutorial.html">Sample tutorial</a></li>
+            <li><a href="file://C:\work\csharp-sumtypes\docs\tools\../output/tutorial.html">Sample tutorial</a></li>
 
             <li class="nav-header">Documentation</li>
-            <li><a href="/csharp-uniontypes/reference/index.html">API Reference</a></li>
+            <li><a href="file://C:\work\csharp-sumtypes\docs\tools\../output/reference/index.html">API Reference</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <a href="https://github.com/johnazariah/csharp-uniontypes"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"/></a>
+    <a href="https://github.com/johnazariah/csharp-sumtypes"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"/></a>
   </body>
   </html>
